--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "mezy",
   "version": "1.0.0",
   "description": "Ingenieria de Software",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "mezy",
