--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "mezy",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
