--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Ingenieria de Software",
   "main": "app.js",
   "scripts": {
+    "start": "node src/app.js",
     "dev": "nodemon src/app.js"
   },
   "keywords": [],
@@ -23,5 +24,5 @@
   "bugs": {
     "url": "https://github.com/JulianNeuss/Mezy/issues"
   },
-  "homepage": "https://github.com/JulianNeuss/Mezy#readme"
+  "homepage": "https://github.com/JulianNeuss/Mezy#readme",
 }
