--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
   "bugs": {
     "url": "https://github.com/JulianNeuss/Mezy/issues"
   },
-  "homepage": "https://github.com/JulianNeuss/Mezy#readme",
+  "homepage": "https://github.com/JulianNeuss/Mezy#readme"
 }
